fix: Delete overflow hidden and height 100vh
- Delete `overflow: hidden` and `height: 100vh`
- The reason for modifying `height: 100vh` is that applying `overflow: hidden` can cause the viewpoint to appear cut off.

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   max-width: 400px;
   margin: 0 auto;
   background-color: white;
-  height: 100vh; /* 높이 지정 */
 }
 
 body {
@@ -10,7 +9,6 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: gray;
-  overflow: hidden;
   height: 100%;
 }
 
